--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "peerDependencies": {
     "vue.js": "^0.3.2",
     "vuex": "^3.1.0"
@@ -23,8 +21,8 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.18",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-config-airbnb-base": "12.1.0",
+    "eslint-plugin-import": "2.16.0",
     "grunt": "^1.0.3",
     "grunt-eslint": "^20.1.0",
     "grunt-sass-lint": "^0.2.4",
