--- a/package.json
+++ b/package.json
@@ -29,5 +29,12 @@
     "grunt-webpack": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "printWidth": 160
   }
 }
