--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    
+  },
   "peerDependencies": {
     "vue.js": "^0.3.2",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+    "bigcommerce-custom-fields-hierarchy": "^0.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
