fixed provided feedbacks

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "prettier": {
     "trailingComma": "all",
     "tabWidth": 4,
+    "useTabs": false,
     "semi": true,
     "singleQuote": true,
     "printWidth": 160
