--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    
+    "bigcommerce-custom-fields-hierarchy": "^0.2.1"
   },
   "peerDependencies": {
     "vue.js": "^0.3.2",
-    "vuex": "^3.1.0",
-    "bigcommerce-custom-fields-hierarchy": "^0.2.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
