--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "brandlabs-ui",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "https://gitlab.brandlabs.net/brandlabs/ui",
   "description": "Common UI components",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +10,8 @@
     "type": "git",
     "url": "git@gitlab.brandlabs.net:brandlabs/ui.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Irakli Svanidze",
+  "license": "UNLICENSED",
   "dependencies": {
     "bigcommerce-custom-fields-hierarchy": "^0.2.1"
   },
