--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "homepage": "https://gitlab.brandlabs.net/brandlabs/ui",
   "description": "Common UI components",
-  "main": "index.js",
+  "main": "./dist/ui.js",
   "scripts": {
     "build": "webpack"
   },
