--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Common UI components",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "grunt"
   },
   "repository": {
     "type": "git",
@@ -31,10 +31,10 @@
     "grunt": "^1.0.3",
     "grunt-eslint": "^20.1.0",
     "grunt-sass-lint": "^0.2.4",
-    "grunt-webpack": "^3.0.2",
+    "grunt-webpack": "^3.1.3",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^1.1.8",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.17",
