--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brandlabs-ui",
   "version": "0.3.0",
-  "homepage": "https://gitlab.brandlabs.net/brandlabs/ui",
+  "homepage": "https://github.com/brandlabs/ui",
   "description": "Common UI components",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.brandlabs.net:brandlabs/ui.git"
+    "url": "git@github.com:brandlabs/ui.git"
   },
   "author": "Irakli Svanidze",
   "license": "UNLICENSED",
