--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Irakli Svanidze",
   "license": "UNLICENSED",
   "dependencies": {
-    "bigcommerce-custom-fields-hierarchy": "^0.2.1"
+    "bigcommerce-custom-fields-hierarchy": "^0.2.1",
+    "mixin-deep": ">=1.3.2",
+    "set-value": ">=2.0.1"
   },
   "peerDependencies": {
     "vue.js": "^0.3.2",
@@ -28,12 +30,20 @@
     "css-loader": "^2.1.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.16.0",
+    "eslint-utils": ">=1.4.1",
+    "fstream": ">=1.0.12",
     "grunt": "^1.0.3",
     "grunt-eslint": "^20.1.0",
     "grunt-sass-lint": "^0.2.4",
     "grunt-webpack": "^3.1.3",
+    "js-yaml": ">=3.13.1",
+    "lodash": ">=4.17.12",
+    "lodash.mergewith": ">=4.6.2",
+    "mem": ">=4.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
+    "serialize-javascript": ">=2.1.1",
+    "tar": ">=2.2.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "vue-loader": "^15.7.0",
     "vue-style-loader": "^4.1.2",
